# VRMXT-Extension-for-Blender

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.cursor/: README.md
.github/workflows/: lint.yml  test.yml
src/io_scene_vrmxt/: __init__.py  blender_manifest.toml  registration.py  version.py
src/io_scene_vrmxt/common/: constants.py  json_util.py  validation.py
src/io_scene_vrmxt/format/: materials_override.py  vfx.py
src/io_scene_vrmxt/hooks/: vrm1_hooks.py
src/io_scene_vrmxt/materials_override/: catalog.py  export_hook.py  import_hook.py  ops.py  panel.py  property_group.py  sync.py  vector_ui.py
src/io_scene_vrmxt/materials_override/catalogs/: CATALOG_PIN.txt  unity-liltoon-cutout.json  unity-liltoon-transparent.json  unity-liltoon-warudo-cutout.json  unity-liltoon-warudo-transparent.json  unity-liltoon-warudo.json  unity-liltoon.json  unity-vrmxt-test-override-builtin.json  unity-vrmxt-test-override-urp.json
src/io_scene_vrmxt/vfx/: export_hook.py  geonodes_preview.py  gltf_texture.py  import_hook.py  ops.py  panel.py  property_group.py  ui_list.py
tests/: test_format_materials_override.py  test_format_vfx.py  test_hooks_registration.py  test_materials_override_catalog.py  test_materials_override_sync.py  test_materials_override_textures.py  test_vfx_geonodes_preview.py  test_vfx_property_adapters.py
tests/resources/gltf/: materials_override_unity.json  vfx_minimal.json
